--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
             android:gravity="center"
-            android:text="Welcome!" />
+            android:text="Welcome!"
+            android:textSize="34sp" />
 
         <TextView
             android:id="@+id/textView4"
