--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/archivo_black"
+            android:fontFamily="More Fonts..."
             android:gravity="center"
             android:text="PHA"
             android:textAllCaps="true"
