--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue_A100"
+    android:background="@color/blue_A400"
     tools:context=".Fragments.Fragment1">
 
     <LinearLayout
@@ -20,16 +20,17 @@
             android:layout_height="100dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="100dp"
+            android:layout_marginBottom="40dp"
             android:src="@drawable/logo" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+
             android:gravity="center"
             android:text="Welcome"
+            android:textColor="@color/white"
             android:textSize="34sp" />
 
         <TextView
@@ -38,7 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="10dp"
+
+            android:textColor="@color/white"
             android:text="to"
             android:textSize="34sp" />
 
@@ -46,21 +48,26 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="40dp"
             android:fontFamily="@font/archivo_black"
             android:gravity="center"
             android:text="PHA"
+            android:textColor="@color/white"
             android:textSize="34sp" />
 
-        <Button
-            android:id="@+id/signin_btn"
-            android:layout_width="wrap_content"
+
+        <com.google.android.gms.common.SignInButton
+
+            android:id="@+id/sign_in_button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginBottom="20dp"
-            android:background="@color/white"
-            android:backgroundTint="@color/white"
-            android:text="Log in with Google" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp">
+
+        </com.google.android.gms.common.SignInButton>
+
 
     </LinearLayout>
 
