--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#212427</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="light_grey">#c2c2c2</color>
+    <color name="grey">#11000000</color>
     <color name="blue_A700">#2962FF</color>
     <color name="blue_A400">#2979FF</color>
     <color name="blue_A200">#448AFF</color>
