--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -10,8 +10,13 @@
         android:id="@+id/imageView4"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
+        android:adjustViewBounds="true"
+        android:background="#2196F3"
+        android:outlineProvider="background"
+        android:padding="2dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -19,9 +24,9 @@
     <TextView
         android:id="@+id/user_name"
         android:layout_width="265dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="60dp"
         android:text="user name"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="136dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,7 +57,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card1"
                     android:layout_width="140dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="120dp"
                     android:layout_margin="20dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="52dp"
@@ -79,10 +84,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="30dp"
-                            android:layout_marginBottom="10dp"
                             android:text="10"
                             android:textAlignment="viewEnd"
-                            android:textSize="20dp" />
+                            android:textSize="32dp" />
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
@@ -90,7 +94,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/card2"
                     android:layout_width="140dp"
-                    android:layout_height="100dp"
+                    android:layout_height="120dp"
                     android:layout_margin="20dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="52dp"
@@ -109,7 +113,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="serif"
-                            android:text="blood presure" />
+                            android:text="Sugar" />
 
                         <TextView
                             android:id="@+id/textView12"
@@ -117,10 +121,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="30dp"
-                            android:layout_marginBottom="10dp"
-                            android:text="10"
+                            android:layout_marginBottom="0dp"
+                            android:text="11"
                             android:textAlignment="viewEnd"
-                            android:textSize="20dp" />
+                            android:textSize="32dp" />
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
@@ -128,5 +132,15 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/email_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="email@email.pha"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/user_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
