--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserProfile">
-
+<!---
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="100dp"
@@ -141,6 +141,6 @@
         android:layout_marginTop="8dp"
         android:text="email@email.pha"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/user_name" />
+        app:layout_constraintTop_toBottomOf="@+id/user_name" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
