--- a/app/src/main/res/layout/activity_add_health_info.xml
+++ b/app/src/main/res/layout/activity_add_health_info.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/add_health_info_fmLy"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserDetails">
+    tools:context=".AddHealthInfo">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
