--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -91,7 +91,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/frag1_nxt_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
