--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -11,6 +11,13 @@
     <!-- TODO: Update blank fragment layout -->
 
 
+    <ImageButton
+        android:id="@+id/frag3_back_imbtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/square_light"
+        android:src="@drawable/icon_arrow_back_24" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
