--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -37,57 +37,29 @@
             android:text="Are You?"
             android:textColor="@color/light_grey" />
 
-        <LinearLayout
+        <RadioGroup
+            android:id="@+id/frag1_gender_radio"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="200dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <RadioButton
+                android:id="@+id/radioButton2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginRight="10dp"
-                android:orientation="vertical">
+                android:background="@drawable/male"
+                android:button="@null" />
 
-                <ImageView
-                    android:id="@+id/imageButton3"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="left"
-                    android:background="@color/blue_A100"
-                    android:src="@drawable/male" />
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Male" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <RadioButton
+                android:id="@+id/radioButton"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginLeft="10dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/imageButton4"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:background="@color/pink_100"
-                    android:src="@drawable/female" />
-
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Female" />
-            </LinearLayout>
-
-        </LinearLayout>
+                android:background="@drawable/female"
+                android:button="@null" />
+        </RadioGroup>
 
     </LinearLayout>
 
