--- a/app/src/main/res/layout/activity_test_diseases.xml
+++ b/app/src/main/res/layout/activity_test_diseases.xml
@@ -4,6 +4,89 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TestDiseases">
+    android:elevation="4dp"
+    tools:context=".MainActivity$HealthDetails">
 
+    <ImageButton
+        android:id="@+id/healD_back_imBtn2"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/square_light"
+        android:scaleType="fitXY"
+        android:src="@drawable/icon_arrow_back_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView32"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-condensed"
+        android:text="Select Your Symptomd"
+        android:textColor="@color/black"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/healD_back_imBtn2" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView32">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/search_bar_smt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    app:queryHint="search"></androidx.appcompat.widget.SearchView>
+
+                <!--<EditText
+                    android:id="@+id/search_smpts_edTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:elevation="1dp"
+                    android:ems="10"
+                    android:hint="search"
+                    android:inputType="textPersonName"
+                    android:outlineProvider="bounds"
+                    android:padding="10dp" />-->
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/smts_listView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <Button
+                android:id="@+id/next_in_symts"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:elevation="2dp"
+                android:text="Next" />
+
+        </LinearLayout>
+    </ScrollView>
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
