--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,13 @@
     android:padding="20dp"
     tools:context=".HomeActivity">
 
+    <Button
+        android:id="@+id/homeA_signout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:text="Logout" />
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/homeA_dp_imgVw"
         android:layout_width="50dp"
