activity_doctor_search biki 2

--- a/app/src/main/res/layout/activity_doctor_search.xml
+++ b/app/src/main/res/layout/activity_doctor_search.xml
@@ -52,7 +52,7 @@
                 android:background="@drawable/outlined_rectangle"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text=""
+                android:hint="search"
                 android:textColor="@color/black" />
 
             <LinearLayout
