--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -202,7 +202,7 @@
                     android:id="@+id/spinner_blood"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="338dp"
+
                     android:spinnerMode="dropdown"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -222,25 +222,27 @@
                     android:id="@+id/blood_p_grp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/frag2_bp_low_radio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="Low" />
 
                     <RadioButton
                         android:id="@+id/frag2_bp_heigh_radio"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
+                        android:layout_weight="1"
                         android:text="High" />
 
                     <RadioButton
                         android:id="@+id/frag2_bp_normal_radio"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:checked="true"
@@ -264,15 +266,16 @@
 
                     <RadioButton
                         android:id="@+id/frag2_sgr_yes_radio"
-                        android:layout_width="174dp"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:layout_weight="1"
                         android:text="Yes" />
+
                     <RadioButton
                         android:id="@+id/frag2_sgr_no_radio"
-                        android:layout_width="174dp"
-                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="No" />
 
